--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@
 
 ## Update : v.0.1.3.9000
 - 2023-01-09 : getGenesByCutoffs -- gene list ID name format
+- 2023-02-10 : hypergeoTestForGeneset.simple -- vectorized calculation for speed.
 
 ## Update : v.0.1.3 (updated to server at Jul 14, 2022)
 - 2022-07-13 : hypergeoTestForGeneset.simple -- match refGMT gene space match after checking
