--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,11 @@
 # CHANGELOG
 
-## Package prep (Ver 0.2.0.9000) (Deployed to Github at Jan 18, 2023)
-- Documents : Add examples
-- Documents : Split CHANGELOG
+## Update : v.0.2.0.9000
+- 2023-02-15 : Run `check()`.
+    - Fixed potential problems in the script (eg. wrong variables...).
+    - Fixed dependency problems (import).
+    - Added License with `use_mit_license()`.
+- 2023-02-15 : PIS results into S3 class object. Added generic print function.
 
 ## Update : v.0.1.3.9000
 - 2023-01-09 : getGenesByCutoffs -- gene list ID name format
