[V 0.3.1] Style fixes and pathway data add

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # CHANGELOG
 
+## Update : v.0.3.0.9000
+- 2023-08-04 : Added pathway sets as data (`intg_pathways`, `intg_pathinfo`).
+
+## Update : v.0.3.0.9000
+- Bug fix : remove na from counts in getPeakResults
+
 ## Update : v.0.2.2.9000
 - 2023-03-17 : Style fixes
 
