Refactor and enhance PIS package functionality
- Improved code formatting for readability and consistency across functions.
- Updated `hypergeoTestForGeneset.simple` to include warnings for query items outside background space and adjusted p-value calculations.
- Enhanced `calculatePathwayScores` to support parallel processing and added verbose messaging.
- Refined `getPeakResults2` for better clarity and structure in output.
- Updated `scoreSmooth` to streamline peak score calculations and added checks for smoothed attributes.
- Improved `drawGeneCntCutoffPeak2` for better visualization of results.
- Added comprehensive documentation in README.md for better user guidance and examples.
- Cleaned up unused code and comments for better maintainability.
- Updated dataset loading in `data-raw/DATASET.R` for consistency with new data handling practices.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # CHANGELOG
 
+## Update : v.0.4.0
+- 2025-08-12 : Clean up code and improve documentation.
+- 2025-08-12 : Readme documentation.
+
 ## Update : v.0.3.1.9000
 - 2023-08-04 : Added pathway sets as data (`intg_pathways`, `intg_pathinfo`).
 - 2023-08-08 : `getGenesByCutoffs` will take column names for q value, logFC, and gene ID as input and rename them.
